put and delete